--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   padding: 15px 0;
 }
 
-.header .container {
+.header-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
